[package]

name = "tiger"
version = "0.0.1"
authors = [ "Derek Woods <derekrw@gmail.com>" ]

[dependencies] 

getopts = "0.2"
yaml-rust = "*"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json= "1.0.2"
serde_yaml= "0.7.1"
md5 = "0.3.4"
rand = "0.3"
mysql = "*"
bincode = "0.8.0"
rusoto_core = {version = "0.26.0"}
rusoto_s3 = {version = "0.26.0"}
rusoto_credential = {version = "0.7.0"}
